# ncnn-android-yolov8

./: .gitignore
my_test/: CMakeLists.txt  yolov8-seg.cpp
my_test/models/: model.ncnn.param
ncnn-android-yolov8/: build.gradle  local.properties
ncnn-android-yolov8/app/: build.gradle
ncnn-android-yolov8/app/src/main/: AndroidManifest.xml
ncnn-android-yolov8/app/src/main/java/com/tencent/yolov8ncnn/: DataAdapter.java  DatabaseHelper.java  HistoricalDataActivity.java  HomeFragment.java  ImageFragment.java  ImageView.java  MainActivity.java  SettingFragment.java  SplashActivity.java  User.java  Yolov8Ncnn.java
ncnn-android-yolov8/app/src/main/jni/: CMakeLists.txt  yolo.cpp  yolo.h  yolov8ncnn.cpp
ncnn-android-yolov8/app/src/main/jni/OpenCV-android-sdk/samples/: build.gradle
ncnn-android-yolov8/app/src/main/jni/OpenCV-android-sdk/samples/gradle/wrapper/: gradle-wrapper.properties
ncnn-android-yolov8/app/src/main/res/drawable/: ic_data_selector.xml  ic_delete.xml  ic_home_selector.xml  ic_setting_selector.xml  rounded_bg.xml
ncnn-android-yolov8/app/src/main/res/layout/: activity_historicaldata.xml  activity_imageview.xml  activity_splash.xml  dialog_edit.xml  dialog_image_picker.xml  dialog_preview.xml  fragment_home.xml  fragment_image.xml  fragment_setting.xml  list_item.xml  main.xml
ncnn-android-yolov8/app/src/main/res/values/: strings.xml
ncnn-android-yolov8/gradle/wrapper/: gradle-wrapper.properties
